# resources/schema/swagger/lightning.openapi.json
@@ -294,15 +294,15 @@
       "GetSubscribeAppleCheckBodyDTO": {
         "type": "object",
         "properties": {
+          "isSandbox": {
+            "type": "string",
+            "description": "是否是沙盒环境 默认false",
+            "default": "false"
+          },
           "bundleId": { "type": "string", "description": "苹果应用的bundleId" },
           "transactionId": {
             "type": "string",
             "description": "苹果应用的transactionId"
-          },
-          "isSandbox": {
-            "type": "boolean",
-            "description": "是否是沙盒环境 默认false",
-            "default": false
           }
         },
         "required": ["bundleId", "transactionId"]
